# Ocean-Health-Monitoring-System

./: .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  README.md  example.py  main.py  pyproject.toml  requirements.txt  setup.sh  simple_example.py
.github/workflows/: ci.yml
configs/data/: ocean_config.yaml
configs/model/: model_config.yaml
configs/viz/: viz_config.yaml
demo/: ocean_health_demo.py
src/: __init__.py
src/data/: __init__.py  ocean_data.py
src/eval/: __init__.py  ocean_evaluation.py
src/models/: __init__.py  ocean_models.py
src/viz/: __init__.py  ocean_visualization.py
tests/: test_ocean_health.py
